--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 
 <body>
+<div class="section-header">
+  
+  <div class="left-space"></div>
+
+  <div class="section-center">
+    <span class="icon">⚡</span>
+    <h2>Tienda virtual ⚡</h2>
+  </div>
+
+  <div class="section-right">
+    <a href="#" class="ver-todo">Ver todo</a>
+  </div>
+
+</div>
+
     <!-- BARRA DE NAVEGACION -->
     <heder class="header">
         <nav class="header__nav">
