aportacion del punto 6,7 y 8 david zabala

--- a/index.html
+++ b/index.html
@@ -98,8 +98,44 @@
         </article>
         <!-- Encabezado de sección con ícono y texto justificados. -->
         <article class="main__article"></article>
+            <section class="task-section">
+                <ul class="task-list">
+                    <li class="task-item">👟 Revisar Inventario</li>
+                    <li class="task-item">📦 Preparar Pedidos</li>
+                    <li class="task-item">🚚 Enviar a Cliente</li>
+                </ul>
+            </section>
+
+            <div class="testimonial-card">
+                <img class="tesyimonial-avatar" src="https://i.pravatar.cc/100" alt="usuario">
+                <div class="testimonial-content">
+                    <p class="testimonial-text">la calidad de los zapatos es muy buena, son muy comodos y el precio es muy accesible, es una pagina muy recomendable</p>
+                    <span class="testimonial-autor">alias pepito perez</span>
+                </div>
+            </div>
     </main>
+    <footer class="footer">
+    <div class="footer__column">
+        <h3 class="footer__title">Sobre Nosotros</h3>
+        <p class="footer__text">tenemos los mejores zapatos deportivos del mercado y los mejores precios, aceptamos pagos por nequi y todo</p>
+    </div>
+    
+    <div class="footer__column">
+        <h3 class="footer__title">Enlaces</h3>
+        <ul class="footer__list">
+            <li><a href="#">Términos y condiciones</a></li>
+            <li><a href="#">Política de privacidad</a></li>
+            <li><a href="#">Soporte técnico</a></li>
+        </ul>
+    </div>
+    
+    <div class="footer__column">
+        <h3 class="footer__title">Contactanos</h3>
+        <p class="footer__text">📍 Calle 123 via girón, bucaramanga santander</p>
+        <p class="footer__text">📞 +57 315 813 5837</p>
+        <p class="footer__text">📧 calzadobuca@gmail.com</p>
+    </div>
+</footer>
 
 </body>
-
 </html>
